--- a/package.json
+++ b/package.json
@@ -17,14 +17,13 @@
     "url": "git+ssh://git@github.com/zxaman/cake-backend.git"
   },
   "keywords": [
-    "SmartWork",
     "Node.js",
     "Express",
     "Backend",
     "Service",
-    "Sales"
+    "cake"
   ],
-  "author": "Shubham",
+  "author": "cake",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/zxaman/cake-backend/issues"
@@ -44,6 +43,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.14",
+    "razorpay": "^2.9.6",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0"
   },
