--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
+MONGODB_URI=mongodb://localhost:27017/cake-shop
+PORT=5000
+JWT_SECRET=your-secret-key-here
+JWT_EXPIRES_IN=30d
 MONGO_URI=mongodb://localhost:27017/cake-project-backend
 JWT_SECRET=your-strong-secret-key
 JWT_EXPIRES_IN=30d
